--- a/src/main/resources/hubmaker.properties
+++ b/src/main/resources/hubmaker.properties
@@ -8,7 +8,7 @@ net.floodlightcontroller.perfmon.PktInProcessingTime,\
 net.floodlightcontroller.staticentry.StaticEntryPusher,\
 net.floodlightcontroller.restserver.RestApiServer,\
 net.floodlightcontroller.topology.TopologyManager,\
-net.floodlightcontroller.learningswitch.LearningSwitch,\
+net.floodlightcontroller.hubmaker.HubMaker,\
 net.floodlightcontroller.linkdiscovery.internal.LinkDiscoveryManager,\
 net.floodlightcontroller.ui.web.StaticWebRoutable,\
 net.floodlightcontroller.loadbalancer.LoadBalancer,\
