--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@ findbugs-results
 *.iml
 .metadata/
 /bin/
+drop_packet_all/
+drop_packet_in/
+drop_packet_out/
+logback.xml
+use_flow_mod/
+use_packet_out/
+use_packet_out2/
